# sycrad-lidar

./: CMakeLists.txt  README.md  main.cpp  resources.qrc  style.qss  win_ico.aps  win_ico.rc
calibration/: calibration_data.h  calibration_parser.cpp  calibration_parser.h  calibration_store.cpp  calibration_store.h
data/: annotation_exporter.cpp  annotation_exporter.h  annotation_importer.cpp  annotation_importer.h  cuboid.h  cuboid_commands.h  cuboid_manager.cpp  cuboid_manager.h  data.h  data_clipper.cpp  data_clipper.h  data_loader.cpp  data_loader.h  pcd_reader.cpp  pcd_reader.h  save_manager.cpp  save_manager.h
icons/: mac.icns
render_engine/: abstract_renderer.cpp  abstract_renderer.h  camera_controller.cpp  camera_controller.h  cuboid_renderer.cpp  cuboid_renderer.h  gizmo_renderer.cpp  gizmo_renderer.h  grid_renderer.cpp  grid_renderer.h  input_handler.cpp  input_handler.h  lidar_viewport.cpp  lidar_viewport.h  orbital_camera.cpp  orbital_camera.h  orthographic_viewport.cpp  orthographic_viewport.h  point_cloud_renderer.cpp  point_cloud_renderer.h  prepare_cmd_buffer.cpp  prepare_cmd_buffer.h  ray.h
shaders/: cuboid.frag  cuboid.vert  gizmo.frag  gizmo.vert  grid.frag  grid.vert  point_cloud.frag  point_cloud.vert
spatial/: octree_builder.cpp  octree_builder.h  octree_node.h
test/: main.py
test/kitti/export/: 0000000010.txt
test/nuscenes/export/: n008-2018-08-01-15-16-36-0400__LIDAR_TOP__1533151607048933.json
ui/: camera_frame.cpp  camera_frame.h  camera_manager.cpp  camera_manager.h  import_widget.cpp  import_widget.h  loading_bar.cpp  loading_bar.h  main_window.cpp  main_window.h  notification_widget.cpp  notification_widget.h  project_manager.cpp  project_manager.h  splash_screen.cpp  splash_screen.h  statistics_widget.cpp  statistics_widget.h
